style/print-resume.css
@media print {

    /* hide before printing */
  
    .navigation,
    .bottom-container,
    .go-to-start-button,
    .print-resume-method,
    .buttons-container,
    .resume-buttons,
    .go-to-top-button-container,
    footer,
    .softuni-svg{
        display: none;
    }

    footer {
        display: none;
    }

    body {
        width: 100%;
        background-color: #1F1F1F;
        border: 1px #4e4d4d solid;
        padding: 0;
        margin: 0;
    }

    .summary p{
        font-size: 0.65em;
    }

    .main-container {
        padding: 0;
        margin: 0;
        background-color: #1F1F1F;
    }

    .resume-body,
    .resume-body-hidden{
        display: flex;
        margin: 0;
        padding: 0;
        flex-direction: column;
        opacity: 100%;
        width: 960px;
        background-color: #1F1F1F;

    }

    .big-container {
        border-width: 1px 0 0 1px;
        padding: 0;
        margin-left: 0.25em;
        height: 168.9em;
    }

    .bigger-container {
        height: 56.5em;
        padding: 2em;
        background-color: #182D41;
        color: #FFFFEE;
        font-size: 1em;
        margin-left: 0;
        margin-top: 1em;
    }

    #ruse{
        padding-top: 8em;
    }

    .inner-columns {
        margin-top: 0px;
    }

    .right-container {
        width: 348px;
    }

    .links-left-column,
    .links-left-column a,
    .links-right-column,
    .links-right-column a {
        text-decoration: none;
    }

    .right-column {
        font-weight: bold;
        border: 1px solid black;
    }

    .links-container1 {
        display: flex;
        flex-direction: column;
        align-items: center;
        align-content: space-evenly;
        width: 908px;
        margin-top: -2em;
    }

    .links-left-column,
    .links-right-column {
        width: 454px;
    }

    .links-left-column {
        margin-left: 5em;
        margin-right: 4em;
    }

    .links-right-column{
        margin-top: 3em;
    }

    .find-me-online {
        padding-top: 0px;
        margin-bottom: 20px;
    }

    .linkedin-container,
    .github-container,
    .facebook-container {
        text-align: center;
       
    }

    .linkedin-container,
    .github-container,
    .facebook-container,
    .portfolio-container{
        margin-left: 4em;
    }



    .skills.passions {
        margin-top: 1.5em;
    }

    #id-experience {
        margin-top: 0.2em;
    }

    #id-tech-skills {
        margin-top: 1em;
    }

    #id-soft-skills {
        margin-top: 1.5em;
    }

    #id-projects {
        margin-top: 1.5em;
    }

    .certificate-container h4:first-of-type {
        align-self: center;
    }

    .school-name{
        margin-top: -0.75em;
    }

    .driving-container {
        padding-bottom: 0;
        margin-bottom: 0;
    }

    #id-tech-skills{
        margin-top: 3em;
    }

    #id-projects{
        margin-top: 13.5em;
    }

    .certificate-details{
        font-size: 9px;
    }

    .profile-picture {
        width: 250px;
        height: 250px;
        border-radius: 50%;
    }

    #snow-canvas{
        display: none;
    }

    .cup-svg{
        display: none;
    }

    .id-certification{
        padding-top: 0.1em;
    }

/*CSS FOR PRINTING BLACK AND WHITE */

    /* .left-container,
    .right-container,
    .profession,
    .summary p,
    .links-container1  h4 a,
    .links-container1  h2,
    .links-right-column h2,
    .links-right-column a,
    .right-container,
    #id-projects,
    .projects-container h4 a,
    .coma,
    .coma-white,
    .bigger-container{
        color: black;
        border: none;
    }

    .coma{
        background-color: black;
        border: 1px black solid;
    }

    .coma-white{
        background-color: lightblue;
    }

    .linkedin-container p,
    .github-container p,
    .facebook-container p,
    .portfolio-container p{
        color: black;
        display: flex;
        flex-direction: column;
        text-align: center;
        margin-left: 4.5em;
    }

    
    .linkedin-container img,
    .github-container img,
    .facebook-container img,
    .portfolio-container img{
        color: lightblue;
        width: 25px;
        height: 25px;
        overflow: hidden;
        margin: 0;
        padding: 0;
        margin-left: 4.5em;
        
    }

    .links-right-column h4 {
        padding-top: 0;
    }

    .links-right-column{
        display: flex;
        flex-direction: column;
    }

    .linkedin-container, .github-container, .facebook-container, .portfolio-container {
        display: flex;
        flex-direction: column;
        align-items: center;
 
    }

    .bigger-container{
        border-top: 1px black solid;
        border-bottom: 1px black solid;

    }
    .right-container{

        border-left: 2px black solid;
    } */
    
}

